# aa-admmonitor

./: .gitignore  README.md  pyproject.toml
admmonitor/: __init__.py  admin.py  apps.py  models.py  notify.py  providers.py  tasks.py
admmonitor/migrations/: 0001_initial.py  0002_development_indices.py
